# eliasfl-chess-gui

./: Cargo.toml  README.md  build.rs  build_installer.ps1
assets/: Ferris template.ai
src/: main.rs
