[package]
name = "eliasfl-chess-gui"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[dependencies]
piston_window = "0.120.0"
glutin = "*"
"eliased-chess" = { git = "https://github.com/INDAPlus21/eliased-chess" }