[package]
name = "eliasfl-chess-gui"
version = "1.0.0"
edition = "2018"
rust-version = "1.53.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[dependencies]
piston_window = "0.120.0"
glutin = "0.26.0"
"eliased-chess" = { git = "https://github.com/INDAPlus21/eliased-chess" }
